--- a/.env.production
+++ b/.env.production
@@ -1,25 +1,11 @@
-#!/bin/bash
-# MPA Mobile App - Production Environment Configuration
-
-# API Configuration
-EXPO_PUBLIC_API_URL=https://api.mpaverification.com
-EXPO_PUBLIC_API_TIMEOUT=30000
-
-# App Configuration
-EXPO_PUBLIC_APP_NAME=MPA Biometric Verification
-EXPO_PUBLIC_APP_VERSION=1.0.0
-EXPO_PUBLIC_BUILD_NUMBER=1
-
-# Feature Flags
-EXPO_PUBLIC_ENABLE_BIOMETRIC=true
-EXPO_PUBLIC_ENABLE_CAMERA=true
-EXPO_PUBLIC_ENABLE_OFFLINE_MODE=true
-EXPO_PUBLIC_ENABLE_SYNC=true
-
-# Logging
-EXPO_PUBLIC_LOG_LEVEL=info
-EXPO_PUBLIC_ENABLE_REMOTE_LOGGING=true
-
-# Security
-EXPO_PUBLIC_ENABLE_SSL_PINNING=true
-EXPO_PUBLIC_CERTIFICATE_PINNING=true
+# Production Environment Configuration
+REACT_APP_ENV=production
+REACT_APP_API_URL=http://13.204.143.245:3000
+REACT_APP_WS_URL=http://13.204.143.245:3000
+REACT_APP_LOG_LEVEL=info
+REACT_APP_SYNC_INTERVAL=30000
+REACT_APP_MAX_RETRIES=3
+REACT_APP_REQUEST_TIMEOUT=15000
+REACT_APP_OFFLINE_MODE=true
+REACT_APP_APP_NAME=MPA BIO VERIFICATION
+REACT_APP_APP_VERSION=1.0.0
